--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,8 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Style/ExponentialNotation:
+  Enabled: false
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
@@ -45,6 +47,8 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: false
 
 Lint/RaiseException:
   Enabled: false
